# aiotg

./: .buildinfo  .gitignore  .travis.yml  README.md  README.rst  __init__.py  aiotg.html  bot.py  genindex.html  index.html  message.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml  test.yml
_modules/: functools.html  index.html
_modules/aiotg/: bot.html  chat.html
_sources/: aiotg.rst.txt  aiotg.txt  index.rst.txt
aiotg/: __init__.py  bot.py  chat.py  ext.py  message.py  mock.py  reloader.py  utils.py
docs/: Makefile  README.md  aiotg.rst  conf.py  index.rst  make.bat  modules.rst
examples/: async.py  callbacks.py  conversation.py  echo.py  getimage.py  post_to_channel.py  webhook.py  whoami.py
tests/: test_callbacks.py  test_webhooks.py
