[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiotg"
dynamic = ["version"]
description = "Asynchronous Python API for building Telegram bots"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Stepan Zastupov", email = "stepan.zastupov@gmail.com" },
]
keywords = [
    "asyncio",
    "telegram",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.8.0",
    "watchdog>=0.9.0",
]

[project.urls]
Homepage = "http://szastupov.github.io/aiotg"

[tool.hatch.version]
path = "aiotg/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/aiotg",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "testfixtures",
]

[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.8.0",
]

[tool.hatch.envs.lint.scripts]
style = [
    "ruff check {args:.}",
    "ruff format --check {args:.}"
]
fmt = [
  "ruff check --fix {args:.}",
  "ruff format {args:.}",
  "style",
]
all = [
    "style"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["E402"]
"examples/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
